clearer and prettier code

--- a/HomeScreen-already-sign-in.html
+++ b/HomeScreen-already-sign-in.html
@@ -3,21 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style2.css" />
+    <link rel="stylesheet" type="text/css" href="./homescreen-already-sign-in.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
 
   <body>
    <div class="container">
       <div class="searching">  
-          <div class="logo-circle">
-              <div class="logo-text"> Logo </div>
-          </div>
-
+          <div class="logo"> Logo </div>
           <input class="search-bar" type="search" placeholder="Finding something?">
-            <!-- <img class="icon" scr="https://i.imgur.com/kUfn6Gk.png" alt=" "> --> 
-
           <div class="login-signup">
+            <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" " >
+            <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" ">
             <div class="profile"> </div>
           </div> 
       </div> 
@@ -30,24 +27,20 @@
 
       <div class="folder">
           <div class="topic">
-            <img class="picture" scr="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Books </div>
           </div>
-
           <div class="topic">
-            <img class="picture" scr="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Toys </div>
           </div>
-
           <div class="topic">
-            <img class="picture" scr="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Clothes </div>
           </div>
-
       </div>
 
       <br/>
-
     </div>
   </body>
 
