--- a/HomeScreen-not-sign-in.html
+++ b/HomeScreen-not-sign-in.html
@@ -3,20 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./homescreen-not-sign-in.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head> 
 
   <body>
    <div class="container">
       <div class="searching">  
-          <div class="logo-circle">
-              <div class="logo-text"> Logo </div>
-          </div>
-
+          <div class="logo"> Logo </div>
           <input class="search-bar" type="search" placeholder="Finding something?">
-            <!-- <img class="icon" scr="https://i.imgur.com/kUfn6Gk.png" alt=" "> --> 
-
           <div class="login-signup">
             <button class = "login" type="button"> Log in </button>
             <button class="signup" type="button"> Sign up </button> 
@@ -31,20 +26,17 @@
 
       <div class="folder">
           <div class="topic">
-            <img class="picture" scr="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Books </div>
           </div>
-
           <div class="topic">
-            <img class="picture" scr="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Toys </div>
           </div>
-
           <div class="topic">
-            <img class="picture" scr="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Clothes </div>
           </div>
-
       </div>
 
       <br/>
