update cleanerrr code

--- a/HomeScreen-already-sign-in.html
+++ b/HomeScreen-already-sign-in.html
@@ -12,7 +12,7 @@
       <div class="searching">  
           <div class="logo"> Logo </div>
           <input class="search-bar" type="search" placeholder="Finding something?">
-          <div class="login-signup">
+          <div class="login-signup" class="space-between">
             <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" " >
             <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" ">
             <div class="profile"> </div>
@@ -25,7 +25,7 @@
 
       <h1> Explore </h1>
 
-      <div class="folder">
+      <div class="space-around">
           <div class="topic">
             <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Books </div>
