--- a/HomeScreen-not-sign-in.html
+++ b/HomeScreen-not-sign-in.html
@@ -24,7 +24,7 @@
 
       <h1> Explore </h1>
 
-      <div class="folder">
+      <div class="space-around">
           <div class="topic">
             <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Books </div>
