foldered all files

--- a/sign-up/sign-up.html
+++ b/sign-up/sign-up.html
@@ -23,17 +23,17 @@
         <input type="password" placeholder="Password" required>
       </div>
       <!-- insert link to homescreen here-->
-      <button type="submit" class="btn" onclick="navigateTo('HomeScreen-already-sign-in.html')"> Sign Up </button>
+      <button type="submit" class="btn" onclick="navigateTo('../homescreen/HomeScreen-already-sign-in.html')"> Sign Up </button>
 
       <div class="text-size"> <p>Or <p>Sign up with</p></p> </div>
       <div class="media-logo"> <!-- link to login screen -->
-        <img onclick="navigateTo('log-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt ="Facebook" class="text-size"/>
-        <img onclick="navigateTo('log-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="text-size"/>
-        <img onclick="navigateTo('log-in.html')" src="https://e7.pngegg.com/pngimages/337/722/png-clipart-google-search-google-account-google-s-google-play-google-company-text.png" alt="Google" class="text-size"/>
+        <img onclick="navigateTo('../log-in/log-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt ="Facebook" class="text-size"/>
+        <img onclick="navigateTo('../log-in/log-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="text-size"/>
+        <img onclick="navigateTo('../log-in/log-in.html')" src="https://e7.pngegg.com/pngimages/337/722/png-clipart-google-search-google-account-google-s-google-play-google-company-text.png" alt="Google" class="text-size"/>
       </div>
       <!-- link to login screen -->
       <div class="text-size">
-        <p> Already have an account? <a href='log-in.html'> Log in </a></p>
+        <p> Already have an account? <a href='../log-in/log-in.html'> Log in </a></p>
       </div>
 
     </form>
