--- a/log-in/log-in.html
+++ b/log-in/log-in.html
@@ -23,14 +23,14 @@
         <input type="password" placeholder="Password" required>
       </div>
       <!-- insert link to homescreen here-->
-      <button type="submit" class="btn" onclick="navigateTo('HomeScreen-already-sign-in.html')"> Log in </button>
+      <button type="submit" class="btn" onclick="navigateTo('../homescreen/HomeScreen-already-sign-in.html')"> Log in </button>
 
       <div class="text-size"> <p>Or <p>Log in with</p></p> </div>
       <div class="media-logo">
         <!-- insert link to homescreen here-->
-        <img  onclick="navigateTo('HomeScreen-already-sign-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt ="Facebook" class="text-size"/>
-        <img  onclick="navigateTo('HomeScreen-already-sign-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="text-size"/>
-        <img  onclick="navigateTo('HomeScreen-already-sign-in.html')" src="https://e7.pngegg.com/pngimages/337/722/png-clipart-google-search-google-account-google-s-google-play-google-company-text.png" alt="Google" class="text-size"/>
+        <img  onclick="navigateTo('../homescreen/HomeScreen-already-sign-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt ="Facebook" class="text-size"/>
+        <img  onclick="navigateTo('../homescreen/HomeScreen-already-sign-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="text-size"/>
+        <img  onclick="navigateTo('../homescreen/HomeScreen-already-sign-in.html')" src="https://e7.pngegg.com/pngimages/337/722/png-clipart-google-search-google-account-google-s-google-play-google-company-text.png" alt="Google" class="text-size"/>
       </div>
     </form>
   </div>
