added navigate functions

--- a/homescreen/homescreen-not-sign-in.html
+++ b/homescreen/homescreen-not-sign-in.html
@@ -12,9 +12,9 @@
       <div class="searching">  
           <div class="logo"> Logo </div>
           <input class="search-bar" type="search" placeholder="Finding something?">
-          <div class="login-signup">
-            <button class = "login" type="button"> Log in </button>
-            <button class="signup" type="button"> Sign up </button> 
+          <div class="login-signup"> <!--link to login and signup-->
+            <button class ="login" type="button" onclick="navigateTo('../log-in/log-in.html')" > Log in </button>
+            <button class="signup" type="button" onclick="navigateTo('../sign-up/sign-up.html')" > Sign up </button> 
           </div> 
       </div> 
             
