--- a/homescreen/HomeScreen-already-sign-in.html
+++ b/homescreen/HomeScreen-already-sign-in.html
@@ -9,15 +9,9 @@
 
   <body>
    <div class="container">
-      <div class="searching">  
-          <div class="logo"> Logo </div>
-          <input class="search-bar" type="search" placeholder="Finding something?">
-          <div class="login-signup" class="space-between">
-            <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" " >
-            <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" ">
-            <div class="profile"> </div>
-          </div> 
-      </div> 
+      <div class="navbar-container">
+        <object class="embedded-content" type="text/html" data="../nav-bar/nav-bar.html"></object>
+      </div>
             
       <div class="information">
           <h1> Introduction about the project/ What this web does</h1>
