--- a/log-in/log-in.html
+++ b/log-in/log-in.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="log-in.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Log In </title>
   <link rel="stylesheet" type="text/css" href="log-in.css">
 </head>
