--- a/sign-up/sign-up.html
+++ b/sign-up/sign-up.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="sign-up.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Sign Up </title>
   <link rel="stylesheet" type="text/css" href="sign-up.css">
 </head>
