bookscreen update already-sign-in & not-sign-in version

--- a/bookscreen-not-sign-in.html
+++ b/bookscreen-not-sign-in.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="./bookscreen.css" />
+    <link rel="stylesheet" type="text/css" href="./bookscreen-not-sign-in.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
 
   <body>
    <div class="container">
-      <div class="searching">  
-          <div class="logo"> Logo </div>
-          <input class="search-bar" type="search" placeholder="Finding something?">
-          <div class="login-signup" class="space-between">
-            <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" " >
-            <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" ">
-            <div class="profile"> </div>
-          </div> 
-      </div> 
+    <div class="searching">  
+        <div class="logo"> Logo </div>
+        <input class="search-bar" type="search" placeholder="Finding something?">
+        <div class="login-signup">
+          <button class = "login" type="button"> Log in </button>
+          <button class="signup" type="button"> Sign up </button> 
+        </div> 
+    </div> 
             
       <img class ="home-page" src="https://img.upanh.tv/2023/12/26/Screenshot-2023-12-26-174840.png" alt="">
 
