--- a/homescreen/homescreen-not-sign-in.html
+++ b/homescreen/homescreen-not-sign-in.html
@@ -9,14 +9,9 @@
 
   <body>
    <div class="container">
-      <div class="searching">  
-          <div class="logo"> Logo </div>
-          <input class="search-bar" type="search" placeholder="Finding something?">
-          <div class="login-signup"> <!--link to login and signup-->
-            <button class ="login" type="button" onclick="navigateTo('../log-in/log-in.html')" > Log in </button>
-            <button class="signup" type="button" onclick="navigateTo('../sign-up/sign-up.html')" > Sign up </button> 
-          </div> 
-      </div> 
+      <div class="navbar-container">
+        <object class="embedded-content" type="text/html" data="../nav-bar/nav-bar.html"></object>
+      </div>
             
       <div class="information">
           <h1> Introduction about the project/ What this web does</h1>
