--- a/items-search/items-search.html
+++ b/items-search/items-search.html
@@ -9,11 +9,10 @@
 
   <body>
    <div class="container">
-      <div class="searching">
-          <img class="icon" src="https://img.upanh.tv/2024/01/06/arrowe065cbf75def9779.png" alt="">
-          <input class="search-bar" type="search" placeholder="Finding something?">
-          <div class="larger white"> Cancel </div>
+      <div class="navbar-container">
+        <object class="embedded-content" type="text/html" data="../nav-bar/nav-bar.html"></object>
       </div>
+
       <br/>
       <div class="content">
         <div class="margin-left"> The Kite Runner </div>
