--- a/homescreen/HomeScreen-already-sign-in.html
+++ b/homescreen/HomeScreen-already-sign-in.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="script.js"></script>
+    <script src="homescreen-not-sign-in.js"></script>
     <link rel="stylesheet" type="text/css" href="./homescreen-already-sign-in.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
@@ -20,16 +20,16 @@
       <h1> Explore </h1>
 
       <div class="space-around">
-          <div class="topic">
+          <div class="topic" onclick="navigateTo('../bookscreen.html')">
             <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
             <div class="title"> Books </div>
           </div>
           <div class="topic">
-            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="../source images/toys poster.jpg" alt=" ">
             <div class="title"> Toys </div>
           </div>
           <div class="topic">
-            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="../source images/clothes poster.jpg" alt=" ">
             <div class="title"> Clothes </div>
           </div>
       </div>
