modify code for nav bar and adjust product detail screen

--- a/home-and-all-items/home-and-all-items.html
+++ b/home-and-all-items/home-and-all-items.html
@@ -8,12 +8,14 @@
   </head>
 
   <body>
+    <!--Nav bar code-->
     <object
       class="embedded-content"
       type="text/html"
       data="../nav-bar/nav-bar.html"
     ></object>
-
+    
+    <!--Body-->
     <div class="user-wrapper">
       <div class="user-tag">
         <div class="seller-info">
