--- a/nav-bar/nav-bar.html
+++ b/nav-bar/nav-bar.html
@@ -21,6 +21,11 @@
     --white-grey: #d9d9d9;
     font-family: "Times New Roman", Times, serif;
   }
+  body{
+    overflow: hidden;
+    margin:0;
+    padding:0;
+  }
   
   .searching {
     display: flex;
@@ -85,6 +90,11 @@
     }
     .folder {
       display: block;
+    }
+    .logo{
+      font-size: medium;
+      margin-right: 0.5em;
+    
     }
   }
 </style>
