modify nav bar for all files

--- a/bookscreen.html
+++ b/bookscreen.html
@@ -9,15 +9,12 @@
 
   <body>
    <div class="container">
-      <div class="searching">  
-          <div class="logo"> Logo </div>
-          <input class="search-bar" type="search" placeholder="Finding something?">
-          <div class="login-signup" class="space-between">
-            <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" " >
-            <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" ">
-            <div class="profile"> </div>
-          </div> 
-      </div> 
+      <!--Nav bar code-->
+      <object
+        class="embedded-content"
+        type="text/html"
+        data="../nav-bar/nav-bar.html"
+      ></object>
             
       <img class ="home-page" src="https://img.upanh.tv/2023/12/26/Screenshot-2023-12-26-174840.png" alt="">
 
