--- a/homescreen/HomeScreen-already-sign-in.html
+++ b/homescreen/HomeScreen-already-sign-in.html
@@ -9,9 +9,12 @@
 
   <body>
    <div class="container">
-      <div class="navbar-container">
-        <object class="embedded-content" type="text/html" data="../nav-bar/nav-bar.html"></object>
-      </div>
+      <!--Nav bar code-->
+      <object
+        class="embedded-content"
+        type="text/html"
+        data="../nav-bar/nav-bar.html"
+      ></object>
             
       <div class="information">
           <h1> Introduction about the project/ What this web does</h1>
