--- a/product-detail/product-detail.html
+++ b/product-detail/product-detail.html
@@ -9,10 +9,13 @@
   </head>
 
   <body>
-    <div class="navbar-container">
-      <object class="embedded-content" type="text/html" data="../nav-bar/nav-bar.html"></object>
-    </div>
-    
+    <!--Nav bar code-->
+    <object
+      class="embedded-content"
+      type="text/html"
+      data="../nav-bar/nav-bar.html"
+    ></object>
+
     <div class="wrapper">
       <!-- Try this link: "https://upload.wikimedia.org/wikipedia/en/thumb/e/e7/Harry_Potter_and_the_Order_of_the_Phoenix_poster.jpg/330px-Harry_Potter_and_the_Order_of_the_Phoenix_poster.jpg" -->
       <div class="image">
