items-search after adding pointer and responsive

--- a/items-search/items-search.html
+++ b/items-search/items-search.html
@@ -9,21 +9,35 @@
 
   <body>
    <div class="container">
-      <div class="navbar-container">
-        <object class="embedded-content" type="text/html" data="../nav-bar/nav-bar.html"></object>
+      <div class="searching">
+        <img class="icon hover-pointer" src="https://img.upanh.tv/2024/01/06/arrowe065cbf75def9779.png" alt="">
+        <input class="search-bar" type="search" placeholder="Finding something?">
+        <button class="cancel"> Cancel </button>
       </div>
 
       <br/>
       <div class="content">
-        <div class="margin-left"> The Kite Runner </div>
-        <hr>
-        <div class="margin-left"> Symphony of Secrets </div>
-        <hr>
-        <div class="margin-left"> Brendan Slocumb </div>
-        <hr>
-        <div class="margin-left"> book </div>
-        <hr>
-        <div class="margin-left white-grey"> Delete recent searches </div>
+        <div class="hover-area"> 
+            <br/>
+            <div class="margin-left"> The Kite Runner </div>
+            <hr>
+        </div>
+        <div class="hover-area"> 
+          <br/>
+          <div class="margin-left"> Symphony of Secrets </div>
+          <hr>
+        </div>
+        <div class="hover-area"> 
+          <br/>
+          <div class="margin-left"> Brendan Slocumb </div>
+          <hr>
+        </div>
+        <div class="hover-area"> 
+          <br/>
+          <div class="margin-left"> book </div>
+          <hr>
+        </div>
+        <div class="margin-left white-grey hover-pointer"> Delete recent searches </div>
       </div>
       
       <br/>
@@ -31,22 +45,22 @@
       <h1> Suggestions </h1>
       
       <div class="space-around">
-        <div class="topic">
+        <div class="topic hover-pointer">
             <img class="pic" src="https://img.upanh.tv/2024/01/06/books.png" alt="">
             <div class="title-topic white"> Books </div>
         </div>
-        <div class="topic">
+        <div class="topic hover-pointer">
           <img class="pic" src="https://img.upanh.tv/2024/01/06/toys.png" alt="">
           <div class="title-topic white"> Toys </div>
         </div>
       </div>
 
       <div class="space-around">
-        <div class="topic">
-            <img class="pic" src="https://img.upanh.tv/2024/01/06/clothes.png" alt="">
-            <div class="title-topic white"> Clothes </div>
+        <div class="topic hover-pointer">
+          <img class="pic" src="https://img.upanh.tv/2024/01/06/clothes.png" alt="">
+          <div class="title-topic white"> Clothes </div>
         </div>
-        <div class="topic">
+        <div class="topic hover-pointer">
           <img class="pic" src="https://img.upanh.tv/2024/01/06/homepage.png" alt="">
           <div class="title-topic"> Homepage </div>
         </div>
