--- a/items-search/items-search.html
+++ b/items-search/items-search.html
@@ -10,38 +10,36 @@
   <body>
    <div class="container">
       <div class="searching">
-        <img class="icon hover-pointer" src="https://img.upanh.tv/2024/01/06/arrowe065cbf75def9779.png" alt="">
-        <input class="search-bar" type="search" placeholder="Finding something?">
-        <button class="cancel"> Cancel </button>
+          <img class="icon" src="https://img.upanh.tv/2024/01/06/arrowe065cbf75def9779.png" alt="">
+          <input class="search-bar" type="search" placeholder="Finding something?">
+          <div class="cancel"> Cancel </div>
       </div>
-
       <br/>
       <div class="content">
-        <div class="hover-area"> 
+        <div class="hover-area">
             <br/>
-            <div class="margin-left"> The Kite Runner </div>
+            <div class="margin-left"> The Kite Runner </div> 
             <hr>
         </div>
-        <div class="hover-area"> 
-          <br/>
-          <div class="margin-left"> Symphony of Secrets </div>
-          <hr>
+        <div class="hover-area">
+            <br/>
+            <div class="margin-left"> Symphony of Secrets </div> 
+            <hr>
         </div>
-        <div class="hover-area"> 
-          <br/>
-          <div class="margin-left"> Brendan Slocumb </div>
-          <hr>
+        <div class="hover-area">
+            <br/>
+            <div class="margin-left"> Brendan Slocumb </div> 
+            <hr>
         </div>
-        <div class="hover-area"> 
-          <br/>
-          <div class="margin-left"> book </div>
-          <hr>
+        <div class="hover-area">
+            <br/>
+            <div class="margin-left"> book </div> 
+            <hr>
         </div>
         <div class="margin-left white-grey hover-pointer"> Delete recent searches </div>
       </div>
       
       <br/>
-
       <h1> Suggestions </h1>
       
       <div class="space-around">
@@ -54,19 +52,16 @@
           <div class="title-topic white"> Toys </div>
         </div>
       </div>
-
       <div class="space-around">
         <div class="topic hover-pointer">
-          <img class="pic" src="https://img.upanh.tv/2024/01/06/clothes.png" alt="">
-          <div class="title-topic white"> Clothes </div>
+            <img class="pic" src="https://img.upanh.tv/2024/01/06/clothes.png" alt="">
+            <div class="title-topic white"> Clothes </div>
         </div>
         <div class="topic hover-pointer">
           <img class="pic" src="https://img.upanh.tv/2024/01/06/homepage.png" alt="">
           <div class="title-topic"> Homepage </div>
         </div>
       </div>
-
     </div>
   </body>
-
 </html>  
