adjusted file names

--- a/homescreen/HomeScreen-already-sign-in.html
+++ b/homescreen/HomeScreen-already-sign-in.html
@@ -24,15 +24,15 @@
 
       <div class="space-around">
           <div class="topic" onclick="navigateTo('../bookscreen.html')">
-            <img class="picture" src="https://images.pexels.com/photos/1370295/pexels-photo-1370295.jpeg?cs=srgb&dl=bookcase-books-bookshelf-1370295.jpg&fm=jpg" alt=" ">
+            <img class="picture" src="../source images/book-poster.jpg" alt=" ">
             <div class="title"> Books </div>
           </div>
           <div class="topic">
-            <img class="picture" src="../source images/toys poster.jpg" alt=" ">
+            <img class="picture" src="../source images/toys-poster.jpg" alt=" ">
             <div class="title"> Toys </div>
           </div>
           <div class="topic">
-            <img class="picture" src="../source images/clothes poster.jpg" alt=" ">
+            <img class="picture" src="../source images/clothes-poster.jpg" alt=" ">
             <div class="title"> Clothes </div>
           </div>
       </div>
