--- a/home-and-all-items/home-and-all-items-not-signin.html
+++ b/home-and-all-items/home-and-all-items-not-signin.html
@@ -3,25 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home & Products</title>
+    <title>Home & Products | Not Sign In</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <style>
-      .btn-request {
+      .btn-delete {
         display: none;
-      }
-      #popupForm{
-        display:none;
-      }
+    }
     </style>
   </head>
+
   <body>
     <!--Nav bar code-->
     <object
       class="embedded-content"
       type="text/html"
-      data="../nav-bar/nav-bar.html"
+      data="../nav-bar/nav-bar-not-sign-in.html"
     ></object>
-
+    
     <!--Body-->
     <div class="user-wrapper">
       <div class="user-tag">
@@ -47,14 +45,8 @@
         </div>
 
         <div class="buttons">
-          <!--
           <button id="followButton" onclick="toggleFollow()" type="button">
             Follow
-          </button>
-        -->
-          <!-- Trigger button to open the pop-up form -->
-          <button class="add-pro-button" onclick="openPopupForm()">
-            Add Product
           </button>
           <button class="chat" type="button" onclick="">Chat</button>
         </div>
@@ -74,60 +66,48 @@
       <div class="section">Order History</div>
       <div class="section">Appointment</div>
     </div>
-
-    <!-- Pop-up Form -->
-    <div class="overlay" id="overlay" onclick="closePopupForm()"></div>
-    <form class="popup-form" id="popupForm">
-      <div class="form-component">
-        <label for="productName">Product Name:</label>
-        <input type="text" id="productName" required />
+<!--
+    <div class="products-wrapper">
+      <div class="item-wrapper">
+        <div
+          class="product-img"
+          onclick="navigateTo('../product-detail/product-detail.html')"
+        >
+          <img src="../source images/harry-potter-book2.jpg" alt="img1" />
+        </div>
+        <div
+          class="product-info"
+          onclick="navigateTo('../product-detail/product-detail.html')"
+        >
+          <p class="bold">Harry Potter - An English Book</p>
+          <p class="small-font">Fantasy, Children, Novel</p>
+        </div>
+        <div class="user-and-request">
+          <div class="img-container">
+            <img
+              src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg"
+              alt="avatar"
+            />
+          </div>
+          <div class="username-and-star">
+            <div class="username small-font bold">Username</div>
+            <div class="stars">
+              <img src="../source images/star.png" />
+              <img src="../source images/star.png" />
+              <img src="../source images/star.png" />
+              <img src="../source images/star.png" />
+              <img src="../source images/star.png" />
+            </div>
+          </div>
+          <button class="btn-request" type="button">Request</button>
+        </div>
       </div>
-
-      <div class="form-component">
-        <label for="productDescription">Product Description:</label>
-        <textarea id="productDescription" required></textarea>
-      </div>
-
-      <div class="form-component">
-        <label for="categories">Categories:</label>
-        <input type="text" id="categories" required />
-      </div>
-
-      <div class="form-component">
-        <label for="location">Location:</label>
-        <input type="text" id="location" required />
-      </div>
-
-      <div class="form-component">
-        <label for="status">Status:</label>
-        <select id="status" required>
-          <option value="excellent">Excellent</option>
-          <option value="new">New</option>
-          <option value="old">Old</option>
-        </select>
-      </div>
-
-      <div class="form-component">
-        <label for="productImage">Upload Your Photo:</label>
-        <input
-          type="file"
-          id="productImage"
-          accept="image/*"
-          onchange="previewImage()"
-          required
-        />
-
-        <div id="imagePreview"></div>
-      </div>
-
-      <div class="buttons">
-        <button type="submit" onclick="addProduct()">Add Product</button>
-        <button type="button" onclick="closePopupForm()">Cancel</button>
-      </div>
-    </form>
-
+      <div class="item-wrapper"></div>
+      <div class="item-wrapper"></div>
+      <div class="item-wrapper"></div>
+    </div>
+  -->
     <div class="products-wrapper" id="productContainer"></div>
-
     <script src="../script.js"></script>
   </body>
 </html>
