--- a/sign-up/sign-up.html
+++ b/sign-up/sign-up.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script src="sign-up.js"></script>
+  <script src="../script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Sign Up </title>
   <link rel="stylesheet" type="text/css" href="sign-up.css">
@@ -24,13 +24,13 @@
         <input type="password" placeholder="Password" required>
       </div>
       <!-- insert link to homescreen here-->
-      <button type="submit" class="btn" onclick="navigateTo('../homescreen/HomeScreen-already-sign-in.html')"> Sign Up </button>
+      <button type="submit" class="btn" onclick="navigateTo('../home-screen/homescreen-already-sign-in.html')"> Sign Up </button>
 
       <div class="text-size"> <p>Or <p>Sign up with</p></p> </div>
-      <div class="media-logo"> <!-- link to login screen -->
-        <img onclick="navigateTo('../log-in/log-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt ="Facebook" class="text-size"/>
-        <img onclick="navigateTo('../log-in/log-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="text-size"/>
-        <img onclick="navigateTo('../log-in/log-in.html')" src="https://e7.pngegg.com/pngimages/337/722/png-clipart-google-search-google-account-google-s-google-play-google-company-text.png" alt="Google" class="text-size"/>
+      <div class="media-logo"> <!-- link to home screen -->
+        <img onclick="navigateTo('../home-screen/homescreen-already-sign-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt ="Facebook" class="text-size"/>
+        <img onclick="navigateTo('../home-screen/homescreen-already-sign-in.html')" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="text-size"/>
+        <img onclick="navigateTo('../home-screen/homescreen-already-sign-in.html')" src="https://e7.pngegg.com/pngimages/337/722/png-clipart-google-search-google-account-google-s-google-play-google-company-text.png" alt="Google" class="text-size"/>
       </div>
       <!-- link to login screen -->
       <div class="text-size">
