--- a/usershop-inbox/usershop-inbox.html
+++ b/usershop-inbox/usershop-inbox.html
@@ -38,7 +38,7 @@
                     <div class="user-account">
                         <div class="ava"> </div>
                         <div class="text">
-                            <div class="small"> username </div>
+                            <div class="small hover-pointer"> username </div>
                             <div> Content fjviajiebriejvjf... </div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                     <div class="user-account">
                         <div class="ava"> </div>
                         <div class="text">
-                            <div class="small"> username </div>
+                            <div class="small hover-pointer"> username </div>
                             <div> Content fjviajiebriejvjf... </div>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                     <div class="user-account">
                         <div class="ava"> </div>
                         <div class="text">
-                            <div class="small"> username </div>
+                            <div class="small hover-pointer"> username </div>
                             <div> Content fjviajiebriejvjf... </div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                     <div class="user-account">
                         <div class="ava"> </div>
                         <div class="text">
-                            <div class="small"> username </div>
+                            <div class="small hover-pointer"> username </div>
                             <div> Content fjviajiebriejvjf... </div>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                     <div class="user-account">
                         <div class="ava"> </div>
                         <div class="text">
-                            <div class="small"> username </div>
+                            <div class="small hover-pointer"> username </div>
                             <div> Content fjviajiebriejvjf... </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                     <div class="user-account">
                         <div class="ava"> </div>
                         <div class="text">
-                            <div class="small"> username </div>
+                            <div class="small hover-pointer"> username </div>
                             <div> Content fjviajiebriejvjf... </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                     <div class="user-account">
                         <div class="ava"> </div>
                         <div class="text">
-                            <div class="small"> username </div>
+                            <div class="small hover-pointer"> username </div>
                             <div> Content fjviajiebriejvjf... </div>
                         </div>
                     </div>
@@ -123,13 +123,13 @@
         
             <div class="chat-area">
                 <div class="user-profile">
-                    <div class="user-ava"> </div>
-                    <div class="bold large"> username </div>
+                    <div class="user-ava hover-pointer"> </div>
+                    <div class="bold large hover-pointer"> username </div>
                 </div>
 
                 <div class="chatting">
                     <div class="you">
-                        <div class="ava"></div>
+                        <div class="ava hover-pointer"></div>
                         <div class="bla-bla"></div>
                     </div>
                     <div class="me">
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="you">
-                        <div class="ava"></div>
+                        <div class="ava hover-pointer"></div>
                         <div class="bla-bla"></div>
                     </div>
                     <div class="me">
@@ -145,7 +145,7 @@
                     </div>
                     
                     <div class="you">
-                        <div class="ava"></div>
+                        <div class="ava hover-pointer"></div>
                         <div class="bla-bla"></div>
                     </div>
                     <div class="me">
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="you">
-                        <div class="ava"></div>
+                        <div class="ava hover-pointer"></div>
                         <div class="bla-bla"></div>\
                     </div>
                     <div class="me">
@@ -164,9 +164,9 @@
                     <br/>
 
                     <div class="chat-option">
-                        <img class="icon" src="https://img.upanh.tv/2024/01/10/add.png" alt="">
-                        <div class="typing"></div>
-                        <img class="icon" src="https://img.upanh.tv/2024/01/10/send.png" alt="">
+                        <img class="icon hover-pointer" src="https://img.upanh.tv/2024/01/10/add.png" alt="">
+                        <input class="typing" type="typing" />
+                        <img class="icon hover-pointer" src="https://img.upanh.tv/2024/01/10/send.png" alt="">
                     </div>
                 </div>
             </div>
