--- a/book-screen/bookscreen-already-sign-in.html
+++ b/book-screen/bookscreen-already-sign-in.html
@@ -9,17 +9,6 @@
 
   <body>
    <div class="container">
-    <!--
-      <nav class="searching">
-        <div class="logo">Logo</div>
-        <input class="search-bar" type="search" placeholder="Finding something?" />
-        <div class="login-signup" class="space-between">
-          <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" " />
-          <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" " />
-          <div class="profile"></div>
-        </div>
-      </nav>  
-    -->
     <!--Nav bar code-->
     <object
       class="embedded-content"
@@ -37,8 +26,6 @@
             <br/>
 
             <div class="part-name"> Gernes </div>
-            <!-- <button class="collapse-button"> </button> -->
-            <!-- <div class="collapsed-content"> -->
               <div class="categories">
                 <div class="option"> 
                   <button class="choice hover-area" type="button"> Adventure </button>
@@ -53,7 +40,6 @@
                   <button class="choice hover-area" type="button"> Romantic </button>
                 </div>
               </div>
-            <!-- </div>   -->
 
             <br/>
 
@@ -84,7 +70,7 @@
               <div class="app">
                 <div class="thumbnail"></div>
 
-                <div class="app-text">
+                <div class="app-text" onclick="navigateTo('../product-detail/product-detail.html')">
                   <div class="bold small hover-pointer"> Harry Potter - A  book written  in English </div>
                   <br/>
                   <div class="dark-grey smaller"> Los Angeles, America </div>
