--- a/home-screen/homescreen-already-sign-in.html
+++ b/home-screen/homescreen-already-sign-in.html
@@ -2,24 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="homescreen.js"></script>
+    <script src="../script.js"></script>
     <link rel="stylesheet" type="text/css" href="./homescreen-already-sign-in.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
 
   <body>
    <div class="container">
-    <!--
-      <nav class="searching">
-        <div class="logo"> Logo </div>
-        <input class="search-bar" type="search" placeholder="Finding something?" />
-        <div class="login-signup" class="space-between">
-          <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" "/>
-          <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" " />
-          <div class="profile"></div>
-        </div>
-      </nav>
-    -->
       <!--Nav bar code-->
       <object
         class="embedded-content"
@@ -34,7 +23,7 @@
       <h1> Explore </h1>
 
       <div class="space-around">
-          <div class="topic">
+          <div class="topic" onclick="navigateTo('../book-screen/bookscreen-already-sign-in.html')">
             <img class="picture hover-pointer" src="https://img.upanh.tv/2024/01/06/books.png" alt=" ">
             <div class="title"> Books </div>
           </div>
