--- a/home-screen/homescreen-not-sign-in.html
+++ b/home-screen/homescreen-not-sign-in.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="homescreen.js"></script>
+    <script src="../script.js"></script>
     <link rel="stylesheet" type="text/css" href="./homescreen-already-sign-in.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
@@ -14,18 +14,7 @@
       type="text/html"
       data="../nav-bar/nav-bar-not-sign-in.html"
     ></object> 
-   <div class="container">
-    <!--
-      <nav class="searching">
-        <div class="logo"> Logo </div>
-        <input class="search-bar" type="search" placeholder="Finding something?" />
-        <div class="login-signup" class="space-between">
-          <img class="icon" src="https://img.upanh.tv/2023/12/14/shopping-cart.png" alt=" "/>
-          <img class="icon" src="https://img.upanh.tv/2023/12/14/bell.png" alt=" " />
-          <div class="profile"></div>
-        </div>
-      </nav>
-    -->     
+   <div class="container">  
       <div class="information">
           <h1> Introduction about the project/ What this web does </h1>
       </div>  
@@ -33,7 +22,7 @@
       <h1> Explore </h1>
 
       <div class="space-around">
-          <div class="topic">
+          <div class="topic" onclick="navigateTo('../book-screen/bookscreen-not-sign-in.html')">
             <img class="picture hover-pointer" src="https://img.upanh.tv/2024/01/06/books.png" alt=" ">
             <div class="title"> Books </div>
           </div>
