--- a/home-and-all-items/home-and-all-items-buyer-view.html
+++ b/home-and-all-items/home-and-all-items-buyer-view.html
@@ -6,10 +6,13 @@
     <title>Home & Products</title>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <style>
-      .btn-request {
+      .btn-delete {
         display: none;
       }
       #popupForm{
+        display:none;
+      }
+      .add-pro-button{
         display:none;
       }
     </style>
@@ -47,11 +50,11 @@
         </div>
 
         <div class="buttons">
-          <!--
+        
           <button id="followButton" onclick="toggleFollow()" type="button">
             Follow
           </button>
-        -->
+    
           <!-- Trigger button to open the pop-up form -->
           <button class="add-pro-button" onclick="openPopupForm()">
             Add Product
