--- a/items-search/items-search.html
+++ b/items-search/items-search.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
     <link rel="stylesheet" type="text/css" href="./items-search.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head> 
@@ -43,7 +43,7 @@
       <h1> Suggestions </h1>
       
       <div class="space-around">
-        <div class="topic hover-pointer">
+        <div class="topic hover-pointer"  onclick="navigateTo('../book-screen/bookscreen-already-sign-in.html')">
             <img class="pic" src="https://img.upanh.tv/2024/01/06/books.png" alt="">
             <div class="title-topic white"> Books </div>
         </div>
