--- a/nav-bar/nav-bar-not-sign-in.html
+++ b/nav-bar/nav-bar-not-sign-in.html
@@ -1,6 +1,6 @@
 <nav class="searching">
   <div class="logo">Logo</div>
-  <input class="search-bar" type="search" placeholder="Finding something?" />
+  <input class="search-bar" type="search" placeholder="Finding something?" onclick="navigateTo('../items-search/items-search.html')"/>
   <div class="login-signup">
     <!--link to login and signup-->
     <button
