--- a/product-detail/product-detail.html
+++ b/product-detail/product-detail.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="product-detail.js"></script>
     <title>Product Detail</title>
     <link rel="stylesheet" type="text/css" href="product-detail.css" />
   </head>
@@ -46,7 +45,7 @@
     </div>
 
     <div class="foot-container">
-      <div class="user-display">
+      <div class="user-display" onclick="navigateTo('../home-and-all-items/home-and-all-items-buyer-view.html')">
         <div class="user-avatar">
           <img
             src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg"
@@ -76,4 +75,5 @@
       </div>
     </div>
   </body>
+  <script src="../script.js"></script>
 </html>
