--- a/book-screen/bookscreen-already-sign-in.html
+++ b/book-screen/bookscreen-already-sign-in.html
@@ -77,8 +77,8 @@
                 </div>
 
                 <div class="user">
-                  <div class="info-user">
-                      <div class="ava"> </div>
+                  <div class="info-user" onclick="navigateTo('../home-and-all-items/home-and-all-items.html')">
+                      <div class="ava hover-pointer"> </div>
                       <div class="name">
                         <div class="bold smaller hover-pointer"> username </div>
                         <img class="icon-smaller" src="https://i.imgur.com/sJfTPva.png" alt="">
