--- a/usershop-inbox/usershop-inbox.html
+++ b/usershop-inbox/usershop-inbox.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <script src="script.js"></script>
+    <title>Chatbox</title>
     <link rel="stylesheet" type="text/css" href="./usershop-inbox.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
