--- a/request-tags/pending-request.html
+++ b/request-tags/pending-request.html
@@ -24,7 +24,7 @@
           <div class="user-container">
             <div class="user-avatar">
               <img
-                src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg"
+                src="../source images/ava.jpg"
                 alt="user avatar"
               />
             </div>
@@ -37,7 +37,7 @@
                 <img src="../source images/star.png" />
                 <img src="../source images/star.png" />
               </div>
-              <div class="date">02-11-2023</div>
+              <div class="date">10-01-2024</div>
             </div>
             <div class="accept-decline">
               <button class="btn-accept">Accept</button>
@@ -62,7 +62,7 @@
           <div class="user-container">
             <div class="user-avatar">
               <img
-                src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg"
+                src="../source images/ava.jpg"
                 alt="user avatar"
               />
             </div>
@@ -87,11 +87,11 @@
             <div class="product-sub-container">
               <div class="product-img">
                 <img
-                  src="../source images/harry-potter-book2.jpg"
+                  src="../source images/diary-of-a-wimpy-kid-big-shot-book.png"
                   alt="product image"
                 />
               </div>
-              <div class="product-name">Harry Potter - An English Book</div>
+              <div class="product-name">Diary of a Wimpy Kid Big Shot</div>
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
           <div class="user-container">
             <div class="user-avatar">
               <img
-                src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg"
+                src="../source images/ava.jpg"
                 alt="user avatar"
               />
             </div>
@@ -125,11 +125,11 @@
             <div class="product-sub-container">
               <div class="product-img">
                 <img
-                  src="../source images/harry-potter-book2.jpg"
+                  src="../source images/diary-of-a-wimpy-kid-book.png"
                   alt="product image"
                 />
               </div>
-              <div class="product-name">Harry Potter - An English Book</div>
+              <div class="product-name">Diary of a Wimpy Kid</div>
             </div>
           </div>
         </div>
