--- a/request-tags/my-request.html
+++ b/request-tags/my-request.html
@@ -23,7 +23,7 @@
         <div class="item-wrapper">
           <div class="user-container">
             <div class="user-avatar">
-              <img src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg" alt="user avatar" />
+              <img src="../source images/ava.jpg" alt="user avatar" />
             </div>
             <div class="user-info">
               <div class="username bold">Username</div>
@@ -34,7 +34,7 @@
                 <img src="../source images/star.png" />
                 <img src="../source images/star.png" />
               </div>
-              <div class="date">02-11-2023</div>
+              <div class="date">10-01-2024</div>
             </div>
             <div class="cancel-button"><button class="btn-cancel">Cancel</button></div>
           </div>
@@ -49,7 +49,7 @@
         <div class="item-wrapper">
             <div class="user-container">
               <div class="user-avatar">
-                <img src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg" alt="user avatar" />
+                <img src="../source images/ava.jpg" alt="user avatar" />
               </div>
               <div class="user-info">
                 <div class="username bold">Username</div>
@@ -66,8 +66,8 @@
             </div>
             <div class="product-container">
               <div class="product-sub-container">
-                  <div class="product-img"><img src="../source images/harry-potter-book2.jpg" alt="product image" /></div>
-                  <div class="product-name"> Harry Potter - An English Book</div>
+                  <div class="product-img"><img src="../source images/diary-of-a-wimpy-kid-big-shot-book.png" alt="product image" /></div>
+                  <div class="product-name">Diary of a Wimpy Kid Big Shot</div>
                 </div>
             </div>
           </div>
@@ -75,7 +75,7 @@
           <div class="item-wrapper">
             <div class="user-container">
               <div class="user-avatar">
-                <img src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg" alt="user avatar" />
+                <img src="../source images/ava.jpg" alt="user avatar" />
               </div>
               <div class="user-info">
                 <div class="username bold">Username</div>
@@ -92,8 +92,8 @@
             </div>
             <div class="product-container">
               <div class="product-sub-container">
-                  <div class="product-img"><img src="../source images/harry-potter-book2.jpg" alt="product image" /></div>
-                  <div class="product-name"> Harry Potter - An English Book</div>
+                  <div class="product-img"><img src="../source images/diary-of-a-wimpy-kid-book.png" alt="product image" /></div>
+                  <div class="product-name">Diary of a Wimpy Kid</div>
                 </div>
             </div>
           </div>
